8310679: [lw5] test refactoring, repurposing primitive classes tests