@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,15 +25,11 @@
  * @test
  * @bug 8209400 8215246
  * @summary Allow anonymous classes to be value types
- * @ignore
- * @compile -XDenablePrimitiveClasses AnonymousValueType.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xverify:none AnonymousValueType
  */
-
 
 public class AnonymousValueType {
     public static void main(String[] args) {
-        Object o = new primitive Comparable<String>() {
+        Object o = new value Comparable<String>() {
             int x = 10;
             @Override
             public int compareTo(String o) {
