@@ -25,10 +25,7 @@
  * @test
  * @bug 8222634
  * @summary Check array creation with V and V.ref
- * @ignore
  * @modules jdk.compiler/com.sun.tools.javac.util jdk.jdeps/com.sun.tools.javap
- * @compile -XDenablePrimitiveClasses ArrayCreationWithQuestion.java
- * @run main/othervm -Xverify:none -XX:+EnableValhalla -XX:+EnablePrimitiveClasses ArrayCreationWithQuestion
  * @modules jdk.compiler
  */
 
@@ -38,9 +35,7 @@ import java.nio.file.Paths;
 
 public class ArrayCreationWithQuestion {
 
-    static primitive class VT {
-        VT.ref[] a1 = new VT.ref[42];
-        VT.ref[] a2 = new VT.ref[42];
+    static value class VT {
         VT[] a3 = new VT[42];
         VT[] a4 = new VT[42];
     }
@@ -56,10 +51,7 @@ public class ArrayCreationWithQuestion {
         runCheck(params, new String [] {
         "         6: anewarray     #1                  // class ArrayCreationWithQuestion$VT",
         "        17: anewarray     #1                  // class ArrayCreationWithQuestion$VT",
-        "        28: anewarray     #10                 // class \"QArrayCreationWithQuestion$VT;\"",
-        "        39: anewarray     #10                 // class \"QArrayCreationWithQuestion$VT;\"",
          });
-
      }
 
      void runCheck(String [] params, String [] expectedOut) {
